| Summary: | ASTERISK-27296: [patch] False positive busy checks when icalendar's recurrence-id mechanism is involved | ||
| Reporter: | Benoît Dereck-Tricot (krells) | Labels: | |
| Date Opened: | 2017-09-26 10:12:03 | Date Closed: | 2017-10-04 06:12:47 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_calendar_icalendar |
| Versions: | 13.17.1 14.6.2 15.0.0-rc1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | SMP Debian 4.9.30-2+deb9u5 (2017-09-19) x86_64 GNU/Linux | Attachments: | |
| Description: | Hi,
We are using the res_calendar_icalendar module and we had false positive issues when using recurring VEVENT components. Steps to reproduce the problem : - create a recurring event (with one recurrence happening now) - edit/move away the recurrence that happens now Now a "calendar show calendars" says busy state Note : do not delete the "edited" recurrence, it would not fail For more details, we had opened an issue to libical first: https://github.com/libical/libical/issues/314 We will push a patch via Gerrit today. Thanks for your reviewing. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-26 10:12:04.524-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-09-26 18:31:33.320-0500 Thanks! Look forward to seeing the patch on Gerrit. By: Sean Bright (seanbright) 2017-10-04 02:17:27.479-0500 Can you please test the latest patch set on the Gerrit review and confirm that it still works for you? I wasn't able to get it to work with libical 1.0.1 on Ubuntu without the changes that I made. By: Benoît Dereck-Tricot (krells) 2017-10-04 03:08:03.249-0500 Done, everything works ! Thanks you for completing the patch :) By: Friendly Automation (friendly-automation) 2017-10-04 06:12:49.207-0500 Change 6625 merged by Jenkins2: res_calendar_icalendar: Filter out occurrences superceded by another VEVENT [https://gerrit.asterisk.org/6625|https://gerrit.asterisk.org/6625] By: Friendly Automation (friendly-automation) 2017-10-04 06:19:26.968-0500 Change 6644 merged by Jenkins2: res_calendar_icalendar: Filter out occurrences superceded by another VEVENT [https://gerrit.asterisk.org/6644|https://gerrit.asterisk.org/6644] By: Friendly Automation (friendly-automation) 2017-10-04 06:27:11.446-0500 Change 6645 merged by Jenkins2: res_calendar_icalendar: Filter out occurrences superceded by another VEVENT [https://gerrit.asterisk.org/6645|https://gerrit.asterisk.org/6645] By: Friendly Automation (friendly-automation) 2017-10-04 06:33:55.903-0500 Change 6646 merged by Jenkins2: res_calendar_icalendar: Filter out occurrences superceded by another VEVENT [https://gerrit.asterisk.org/6646|https://gerrit.asterisk.org/6646] By: Benoît Dereck-Tricot (krells) 2017-10-05 19:18:31.817-0500 Thank you for the review and for dealing with the problem with libical v1 that I missed :) By: Asterisk Team (asteriskteam) 2017-10-05 19:18:32.193-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||